src/objects/Issue__c.object
<CustomObject>
    <description>PMO: For tracking project related issue</description>
    <fields>
        <fullName>Assign_To__c</fullName>
        <label>Assign To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Close_Date__c</fullName>
        <label>Close Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Comments__c</fullName>
        <label>Comments</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Counterpart__c</fullName>
        <label>Counterpart</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Due_Date__c</fullName>
        <label>Due Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Hidden_Formula_calculates_reminder_date__c</fullName>
        <formula>MOD(TODAY() - DATE(1900, 1, 7), 7)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>*Hidden Formula calculates reminder date</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Issue_Description__c</fullName>
        <label>Issue Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Issue_Type__c</fullName>
        <label>Issue Type</label>
        <picklist>
            <picklistValues>
                <fullName>Internal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Raise to MB</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Raise to PMO</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Module__c</fullName>
        <label>Module</label>
        <picklist>
            <picklistValues>
                <fullName>Account/Contact</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Product/Vehicle</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Case</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Campaign</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Lead</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Knowledge</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Security</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Integration</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Report/Dashboard</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Data Model</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales/Aftersales/Warranty</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SSI</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>QC</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Dealer Portal</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Priority__c</fullName>
        <label>Priority</label>
        <picklist>
            <picklistValues>
                <fullName>Low</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Medium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>High</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Project_Log_ID__c</fullName>
        <externalId>true</externalId>
        <label>Project Log ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raised_By__c</fullName>
        <label>Raised By</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Raised_Date__c</fullName>
        <label>Raised Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reference_No_of__c</fullName>
        <label>Reference No. of Process/UC/BQ</label>
        <length>200</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Related_Requirement_User_Story__c</fullName>
        <label>Related Requirement/User Story</label>
        <referenceTo>Requirement_UserStory__c</referenceTo>
        <relationshipLabel>Issues</relationshipLabel>
        <relationshipName>Issues</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Reminder_Date__c</fullName>
        <label>*Reminder Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resolution_Solution__c</fullName>
        <label>Resolution/Solution</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Screenshot__c</fullName>
        <label>Screenshot</label>
        <length>32768</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>In Progress</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Propose to Close</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Delayed</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>Issue</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Module__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>AllClosed</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Module__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Priority__c</columns>
        <columns>Assign_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Closed</value>
        </filters>
        <label>All Closed</label>
    </listViews>
    <listViews>
        <fullName>AllOpen</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Module__c</columns>
        <columns>Issue_Type__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <label>All Open</label>
    </listViews>
    <listViews>
        <fullName>AllRaisetoPMOOpen</fullName>
        <booleanFilter>1 OR 2</booleanFilter>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Comments__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Counterpart__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>Raised_By__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Issue_Type__c</field>
            <operation>equals</operation>
            <value>Raise to PMO</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Issue__c.PMO_Issue</value>
        </filters>
        <label>All Raise to PMO</label>
    </listViews>
    <listViews>
        <fullName>InternalOpen</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Module__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Issue_Type__c</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filters>
        <label>Internal Open</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>My_Delayed_Issues</fullName>
        <columns>NAME</columns>
        <columns>Issue_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Counterpart__c</columns>
        <columns>Comments__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Delayed</value>
        </filters>
        <label>My Delayed Issues</label>
    </listViews>
    <listViews>
        <fullName>My_Issues</fullName>
        <columns>NAME</columns>
        <columns>Issue_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Screenshot__c</columns>
        <columns>Resolution_Solution__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Counterpart__c</columns>
        <columns>Comments__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Raised_Date__c</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>notEqual</operation>
            <value>Closed</value>
        </filters>
        <filters>
            <field>RECORDTYPE</field>
            <operation>equals</operation>
            <value>Issue__c.PMO_Issue</value>
        </filters>
        <label>My Open  PMO Issues</label>
    </listViews>
    <listViews>
        <fullName>My_in_Progress_Issues</fullName>
        <columns>NAME</columns>
        <columns>Issue_Type__c</columns>
        <columns>Status__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Due_Date__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Counterpart__c</columns>
        <columns>Comments__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Mine</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>In Progress</value>
        </filters>
        <label>My in Progress Issues</label>
    </listViews>
    <listViews>
        <fullName>OldInternalOpen</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Module__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Assign_To__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Priority__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Issue_Type__c</field>
            <operation>equals</operation>
            <value>Internal</value>
        </filters>
        <filters>
            <field>CREATED_DATE</field>
            <operation>lessThan</operation>
            <value>N_WEEKS_AGO:2</value>
        </filters>
        <label>Old Internal Open</label>
        <sharedTo/>
    </listViews>
    <listViews>
        <fullName>RaisetoMBOpen</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>Module__c</columns>
        <columns>Raised_By__c</columns>
        <columns>Raised_Date__c</columns>
        <columns>Issue_Description__c</columns>
        <columns>Comments__c</columns>
        <columns>Priority__c</columns>
        <columns>Assign_To__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Status__c</field>
            <operation>equals</operation>
            <value>Open</value>
        </filters>
        <filters>
            <field>Issue_Type__c</field>
            <operation>equals</operation>
            <value>Raise to MB</value>
        </filters>
        <label>Raise to MB Open</label>
        <sharedTo/>
    </listViews>
    <nameField>
        <displayFormat>ISSUE-{0000}</displayFormat>
        <label>Issue No.</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Issues</pluralLabel>
    <recordTypes>
        <fullName>Non_PMO_Issue</fullName>
        <active>true</active>
        <description>For NTT to manage internal issues</description>
        <label>Non-PMO Issue</label>
    </recordTypes>
    <recordTypes>
        <fullName>PMO_Issue</fullName>
        <active>true</active>
        <description>For PMO meetings</description>
        <label>PMO Issue</label>
    </recordTypes>
    <sharingModel>Private</sharingModel>
</CustomObject>